MOBI-489 Showcase Updates - fix date/time popup clipped at bottom
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32128 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/icemobilespring/src/main/webapp/resources/style.css
+++ b/samples/icemobilespring/src/main/webapp/resources/style.css
@@ -228,6 +228,7 @@ html.honeycomb h3, html.android h3{
     padding: 0 1%;
     font-weight:normal;
 }
+.form{ height: 100% }
 .form .mobi-fieldset{
     text-align:center;
 }
