--- a/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -226,6 +226,7 @@ html.honeycomb h3{
     padding: 0 1%;
     font-weight:normal;
 }
+.form{ height: 100% }
 .form .mobi-fieldset{
     text-align:center;
 }
